fixed issue where menu icon too small

--- a/components/layout/navbar.module.css
+++ b/components/layout/navbar.module.css
@@ -20,8 +20,8 @@
 }
 .hamburger {
   border: 0;
-  height: 50px;
-  width: 50px;
+  height: 50px !important;
+  width: 50px !important;
   color: var(--main-color);
   padding: 0.5rem;
   position: absolute;
@@ -67,7 +67,7 @@
     position: relative;
     padding: 0;
     top: 50%;
-    /* transform: translateY(-20%); */
+    transform: translateY(-20%);
     list-style: none;
   }
   .navExpanded ul li {
